[gd_scene load_steps=3 format=3 uid="uid://perfpanel"]

[ext_resource type="Script" path="res://src/ui/performance_settings_panel.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="1_style"]
bg_color = Color(0.1, 0.1, 0.12, 0.9)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_left = 6
corner_radius_bottom_right = 6

[node name="PerformanceSettingsPanel" type="Control"]
anchor_left = 0.7
anchor_top = 0.05
anchor_right = 0.98
anchor_bottom = 0.35
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 6

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
text = "Performance Settings"
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1

[node name="PerfModeCheck" type="CheckBox" parent="MarginContainer/VBoxContainer"]
text = "Perf Mode (all features)"
button_pressed = false

[node name="ViewportsCheck" type="CheckBox" parent="MarginContainer/VBoxContainer"]
text = "Suspend UI Viewports"
button_pressed = false

[node name="MirrorsCheck" type="CheckBox" parent="MarginContainer/VBoxContainer"]
text = "Hide Mirrors"
button_pressed = false

[node name="ShadowsCheck" type="CheckBox" parent="MarginContainer/VBoxContainer"]
text = "Reduce Shadow Distance"
button_pressed = false

[node name="SpawnShadowCheck" type="CheckBox" parent="MarginContainer/VBoxContainer"]
text = "Disable Spawn Shadows"
button_pressed = false

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme_override_styles/panel = SubResource("1_style")
